persistence/ceph/rook/prometheus/grafana/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: prometheus-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472

      containers:
      - name: grafana
        image: shixiaochuangk8s/grafana:12.0.1
        imagePullPolicy: IfNotPresent

        ports:
        - name: grafana
          containerPort: 3000

        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi

        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 30

        volumeMounts:
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources/prometheus.yaml
          subPath: prometheus.yaml
          readOnly: true

        - name: grafana-storage
          mountPath: /var/lib/grafana

      volumes:
      - name: grafana-datasources
        configMap:
          name: grafana-datasources
          defaultMode: 420

      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc
