persistence/ceph/rook/prometheus/grafana/grafana-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: prometheus-ns
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus-ns
  labels:
    app: grafana
spec:
  ingressClassName: 'nginx'
  rules:
  - host: grafana.shixiaochuang.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
